--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script>
         // Function to fetch and display images from Google Sheets
         function fetchImagesFromGoogleSheets() {
-            const sheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQCvVHaHWXD6u6kefjWZTbTwMmoIgGVb_oas6VFfNvxgag6vbSuZFa7J7b13vhLWlSZAIiFLdLxnoAY/pub?output=csv'; // Replace with your Google Sheets CSV URL
+            const sheetURL = 'https://docs.google.com/spreadsheets/d/12dkYpc21pAbPJGVUz8X2QnRiExpxzrSVZn94fRNwY2U/edit?usp=sharing'; // Replace with your Google Sheets CSV URL
 
             fetch(sheetURL)
                 .then(response => response.text())
